--- a/TODO.txt
+++ b/TODO.txt
@@ -1,10 +1,20 @@
-- voeg optie toe op chart van 1 uur DONE
-- de percentage weergeven bij chart DONE
-- huidige percentage bij info over coin DONE
+ALGEMEEN
 - code in verschillende componenten verdelen
+- naam veranderen naar My Crypto
+- code cleaning
 
+
+HOMEPAGE
 - weergeven van de hoogste stijgers en dalers
+
+
+COINPAGE
 - display lowest and highest price in 24h (range)
 
 
-- put all firebaseConfig data in .env file
+TABELLEN
+- filteren op coinnaam en ....
+
+
+
+SERVER
